<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/avg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/druga_strona"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numOf"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/exit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/exit"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avg"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/surname"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginStart="20dp"
        android:layout_weight="1"
        android:text="@string/nazwisko"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBaseline_toBaselineOf="@+id/surnameValue"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/surnameValue"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:layout_weight="1"
        android:hint="@string/wpisz_nazwisko"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toEndOf="@+id/surname"
        app:layout_constraintTop_toBottomOf="@+id/nameValue" />

    <TextView
        android:id="@+id/numOf"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="12dp"
        android:layout_weight="1"
        android:text="@string/oceny"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBaseline_toBaselineOf="@+id/numOfValue"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/numOfValue"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:hint="@string/wpisz_liczb_ocen_5_15"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/numOf"
        app:layout_constraintTop_toBottomOf="@+id/surnameValue" />

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/imie"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBaseline_toBaselineOf="@+id/nameValue"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/nameValue"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginTop="16dp"
        android:hint="@string/wpisz_imie"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/avgText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numOfValue" />
</androidx.constraintlayout.widget.ConstraintLayout>